Education Page SVG Overlapping Bug Fixed

--- a/assets/css/education.css
+++ b/assets/css/education.css
@@ -49,7 +49,7 @@ html{
     }
     .godown {
         position: absolute;
-        z-index: 2;
+        z-index: 1;
         padding-top: 8rem;
     }
 }
